[gd_scene load_steps=9 format=3 uid="uid://br63ueumubdwc"]

[ext_resource type="Texture2D" uid="uid://dg6q4gqe0s4qv" path="res://images/ui/icon.svg" id="1_qlf07"]
[ext_resource type="Script" uid="uid://dluef78lgl6rd" path="res://menus/pause_menu.gd" id="1_ybqm1"]
[ext_resource type="Texture2D" uid="uid://bc0uoqeehx3b4" path="res://images/Line Divider White.png" id="2_qlf07"]
[ext_resource type="Texture2D" uid="uid://c5c1u88vvq4n" path="res://images/Logo White.png" id="3_0wv6w"]
[ext_resource type="Theme" uid="uid://b4xt1mbqqb0m1" path="res://menus/themes/BigFancyText.tres" id="3_mtdpf"]
[ext_resource type="Theme" uid="uid://odcvd68u8bby" path="res://menus/themes/ingameMenuButton.tres" id="5_emjh3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6afj"]
bg_color = Color(0.05, 0.05, 0.05, 0.862745)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aiq41"]

[node name="Pause Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ybqm1")
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 342.0
offset_top = 486.0
offset_right = 624.0
offset_bottom = 512.0
text = "this is riduculouse!"

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(342, 486)
texture = ExtResource("1_qlf07")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x6afj")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(645, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mtdpf")
theme_override_font_sizes/normal_font_size = 70
text = "GAME PAUSED"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlocksIcon" type="TextureRect" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.07
texture = ExtResource("2_qlf07")
expand_mode = 2
stretch_mode = 5

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_emjh3")
text = "Resume"

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_emjh3")
text = "Restart"

[node name="UpgradesButton" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_emjh3")
text = "Upgrades"

[node name="OptionsButton" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_emjh3")
text = "Options"

[node name="BlocksIcon2" type="TextureRect" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32.147)
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.07
texture = ExtResource("2_qlf07")
expand_mode = 2
stretch_mode = 5

[node name="MainMenuButton" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_emjh3")
text = "Main Menu"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_emjh3")
text = "Quit"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_aiq41")

[node name="LogoFancyV2Transparent" type="Sprite2D" parent="."]
position = Vector2(1757, 949)
scale = Vector2(0.132029, 0.132029)
texture = ExtResource("3_0wv6w")

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/UpgradesButton" to="." method="_on_upgrades_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
